# mkcres

./: .travis.yml  LICENSE  README.md  cresource.c  cresource.h  index.html  mkcres.cmake  mkcres.py  params.json
examples/example-01/: CMakeLists.txt  FILE01  FILE02  main.c  resources.json
examples/example-02/: Makefile  main.c
examples/example-cmake/: CMakeLists.txt  FILE03  main.c
examples/example-make/: main.c  resources.json
tests/: CMakeLists.txt  build_and_run_tests.sh  main.c  main.cpp  test_resources2.json
